// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserController <Create/ > should create a user 1`] = `
{
  "active": true,
  "bio": "This is my bio",
  "email": "jdoe@me.com",
  "id": "42-d-f-df4",
  "name": "John Doe",
  "profileImg": "https://example.com/profile.jpg",
  "username": "jDoe453",
}
`;

exports[`UserController <Create/ > should throw ConflictException when email or username is already in use 1`] = `[ConflictException: This email or username is already associated with an existing account]`;

exports[`UserController <Delete /> should delete a user successfully 1`] = `
{
  "message": "User deleted successfully",
}
`;

exports[`UserController <Delete /> should throw an NotFoundException 1`] = `[NotFoundException: User not found]`;

exports[`UserController <FindAll /> should return an array of users 1`] = `
{
  "count": 1,
  "users": [
    {
      "id": "42-d-f-df4",
      "name": "John Doe",
      "profileImg": "https://example.com/profile.jpg",
      "username": "jDoe453",
    },
  ],
}
`;

exports[`UserController <FindOne /> should return a user successfully 1`] = `
{
  "active": true,
  "bio": "This is my bio",
  "email": "jdoe@me.com",
  "id": "42-d-f-df4",
  "name": "John Doe",
  "profileImg": "https://example.com/profile.jpg",
  "username": "jDoe453",
}
`;

exports[`UserController <FindOne /> should throw an NotFoundException 1`] = `[NotFoundException: User not found]`;

exports[`UserController <Update /> should throw an ConflictException 1`] = `[ConflictException: Email is already associated with an existing account]`;

exports[`UserController <Update /> should throw an NotFoundException 1`] = `[NotFoundException: User not found]`;

exports[`UserController <Update /> should update a user successfully 1`] = `
{
  "active": true,
  "bio": "Update bio",
  "email": "jdoe@me.com",
  "id": "42-d-f-df4",
  "name": "John Doe",
  "profileImg": "https://example.com/profile.jpg",
  "username": "jDoe453",
}
`;
